<package format="2">
  <name>e_rick</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Assembly_of_rickshaw</p>
    <p>This package contains configuration data, 3D models and launch files
for e_rick robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
 <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
<exec_depend>rrbot_control</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
